test/error/MethodStaticMutating.fu
public static class Test
{
	public static bool Run!() //ERROR: Expected '(', got '!'
	{
		return true;
	}
}
